*	VERSION: 2.2.5                               *
*	LAST UPDATE: Oct 9 2016                      *
*                                                *
**************************************************

Update: October 9th 2016
==================================================
->Implemented functionality for QualityControl::Plotter::PlotterHisto to draw TH1F objects with unit integral

Update: October 8th 2016
==================================================
->Added two struct's QualityControl::Plotter::PlotColorPaletteRGB and PlotColorPaletteMono in include/PlotterUtilityTypes.h for defining color palette's
->QualityControl::Plotter::PlotterGeneric::setStyle() will now use PlotColorPaletteRGB as the default color palette
->QualityControl::Plotter::PlotterGraph2D::drawPlots() will now use PlotColorPaletteMono for the mono-color palette
->Updated QualityControl::Plotter::drawLatex() to treat the "~" as a space character; when entering Canv_Latex_Line in the plot config file use "~" for spaces.

Update: October 7th 2016
==================================================
->Changed SRSMain::Reprocess() to call SRSMain::Close() when corrupted input is identified; this will exit the run but produce a TTree file for a portion of the events that are good.
->Modified QualityControl::Plotter::ParameterLoaderPlotter::getColLabelPositions() such that it tests for the presence of the col heading rather than requiring an exact match

Update: October 6th 2016
==================================================
->Added new class QualityControl::Plotter::PlotterGraph2D inheriting from PlotterGeneric for making plots of TGraph2D objects
->Added new class QualityControl::Plotter::PlotterHisto inheriting from PlotterGeneric for making plots of TH1F objects
->Added new struct QualityControl::Plotter::PlotTypesPlotter, in include/QualityControlSectionNames.h, for tracking type of TObject for plotter to plot
->Now genericPlotter will understand what type of TObject it should plot