@@ -3,10 +3,13 @@
     Canv_Dim = '1000,1000'; #X, Y
     Canv_DrawOpt = 'E1';
     Canv_Grid_XY = 'false,false'; #X, Y
-    Canv_Latex_Line = '0.19,0.75, GE1/1-VII-L-CERN-0002'; #X_NDC, Y_NDC, String
+    Canv_Latex_Line = '0.23,0.9, Detetector~=~GE1/1-VII-L-CERN-0004'; #X_NDC, Y_NDC, String
+    Canv_Latex_Line = '0.23,0.85, Gas~=~Ar/CO_{2}~#left(70,30#right)'; #X_NDC, Y_NDC, String
+    Canv_Latex_Line = '0.23,0.80, Divider~Current~=~537~#muA'; #X_NDC, Y_NDC, String
+    Canv_Latex_Line = '0.23,0.75, No~Source'; #X_NDC, Y_NDC, String
     Canv_Legend_Dim_X = '0.5,0.95'; X_NDC_1, X_NDC_2
     Canv_Legend_Dim_Y = '0.14,0.40'; Y_NDC_1, Y_NDC_2
-    Canv_Legend_Draw = 'false';
+    Canv_Legend_Draw = 'true';
     Canv_Log_XY = 'false,false'; #X, Y
     Canv_Logo_Pos = '11';
     Canv_Logo_Prelim = 'true';
@@ -14,19 +17,46 @@
     Canv_Margin_Bot = '0.12';
     Canv_Margin_Lf = '0.12';
     Canv_Margin_Rt = '0.04';
-    Canv_Name = 'GE11-VII-L-CERN-0002_RespFitPkPosDataset';
+    Canv_Name = 'SliceTest_QC5SS_Long4_iEta8';
     Canv_Normalize = 'true';
     Canv_Plot_Type = 'TH1F';
     Canv_Range_X = '0,2500'; #X1, X2
     Canv_Range_Y = '0,150'; #Y1, Y2
     Canv_Title_Offset_X = '1.2';
     Canv_Title_Offset_Y = '1.65';
-    Canv_Title_X = 'Fitted Cu Fluorescence Peak Position #left(ADC#right)';
-    Canv_Title_Y = 'Entries';
+    Canv_Title_X = 'Hit Position #left(Strip No.#right)';
+    Canv_Title_Y = 'A.U.';
     [BEGIN_PLOT]
         Plot_Color = 'kBlack';
-        Plot_Name = 'h_Summary_ResponseFitPkPosDataset';
-        Plot_Root_File = 'GE11-VII-L-CERN-0002_Summary_Physics_Optimized_RandTrig_XRay40kV100uA_580uA_10826kEvt_AnaWithFits.root';
-        Plot_Root_Path = 'Summary/';
+        Plot_LegEntry = 'Baseline';
+        Plot_Line_Size = '1';
+        Plot_Line_Style = '1';
+        Plot_Marker_Size = '0.7';
+        Plot_Marker_Style = '20';
+        Plot_Name = 'h_iEta8_hitPos';
+        Plot_Root_File = 'data/SpuriousSignal/GE11-VII-L-CERN-0004_Run043_SpuriousSignal_537uA_NoSource_515kEvt_Ana.root';
+        Plot_Root_Path = 'SectorEta8/';
+    [END_PLOT]
+    [BEGIN_PLOT]
+        Plot_Color = 'kBlue';
+        Plot_LegEntry = 'Insulated Pullouts & 1 Stretching Screw Removed';
+        Plot_Line_Size = '1';
+        Plot_Line_Style = '1';
+        Plot_Marker_Size = '0.7';
+        Plot_Marker_Style = '22';
+        Plot_Name = 'h_iEta8_hitPos';
+        Plot_Root_File = 'data/SpuriousSignal/GE11-VII-L-CERN-0004_SpuriousSignal_CoatedPullOutsNScrewRemoved_537uA_103kEvt_Ana.root';
+        Plot_Root_Path = 'SectorEta8/';
+    [END_PLOT]
+    [BEGIN_PLOT]
+        Plot_Color = 'kBlue';
+        Plot_LegEntry = 'Nylon Pullouts & 1 Stretching Screw Removed';
+        Plot_Line_Size = '1';
+        Plot_Line_Style = '1';
+        Plot_Marker_Size = '0.7';
+        Plot_Marker_Style = '24';
+        Plot_Name = 'h_iEta8_hitPos';
+        Plot_Root_File = 'data/SpuriousSignal/GE11-VII-L-CERN-0004_SpuriousSignal_NylonPullOutsNScrewRemoved_537uA_103kEvt_Ana.root';
+        Plot_Root_Path = 'SectorEta8/';
     [END_PLOT]
 [END_CANVAS]
